# TripleDutch

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  env.json  main.cpp  nginx.conf  test.py
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/headers/: DatabaseConnector.h  FileHandler.h  Lock.h  LockManager.h  Logger.h  QueryBuilder.h  Server.h  System.h  TDAServer.h  TDASystem.h
src/source/: databaseConnector.cpp  fileHandler.cpp  lock.cpp  lockManager.cpp  logger.cpp  main.cpp  queryBuilder.cpp  server.cpp  system.cpp  tdaServer.cpp  tdaSystem.cpp
